deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
  name: ava-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ava.samgamage.dev
      secretName: ava-proxy-tls
  rules:
    - host: ava.samgamage.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ava-client
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ava-server
                port:
                  name: http
